# tempus-redux

./: CMakeLists.txt  Makefile  README.rst  dependencies.lock.esp32s3  partitions.lolin-s3.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
.uuid-uk/: Jenkinsfile
src/: CMakeLists.txt  Kconfig  calendar.cpp  idf_component.yml  main.cpp  network.cpp  time_signal.cpp  transmit.cpp  ui.cpp
src/clockson/: calendar.h  freertos.h  main.h  network.h  time_signal.h  transmit.h  ui.h
